k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glpi
  namespace: default
  labels:
    app: glpi
spec:
  selector:
    matchLabels:
      app: glpi
  replicas: 1 
  template: 
    metadata:
      labels:
        app: glpi
    spec:
      volumes:
          - name: glpi-pvc
            persistentVolumeClaim:
              claimName: glpi-pvc
      containers:
      - name: glpi
        image: marcent/glpi-k8s:latest
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - mountPath: /var/www/html/
          name: glpi-pvc
